--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>My TypeScript App</title>
+    <link rel="icon" href="/src/assets/images/favicon.webp" type="image/x-icon">
+    <title>Card</title>
 </head>
+
 <body>
     <div id="app"></div>
 </body>
+
 </html>
